# next-gen-search-engine

./: .gitignore  API_REFERENCE.md  COMPLETE_ROADMAP.md  FYP_PROJECT_SUMMARY.md  README.md  package-lock.json  package.json  test.js  test_api_quick.py
analysis/: FYP Results.xlsx  fyp_analysis.py  generate_figures.py
analysis/decrypted_datasets/: custom_dataset.jsonl  extract_browsecomp.py
backend/: .env.example  .env.template  API_DOCUMENTATION.md  QUICKSTART.md  README.md  SETUP.md  TEXTGRAD_ENDPOINTS.md  dataset.py  main.py  pyproject.toml  tavily_pipeline.py  temp.py  test.py  test_api.py  test_enhanced_search.py  test_textgrad_endpoints.py
backend/agent/: models.py  research_agent.py
backend/config/: __init__.py  app_config.py  env_utils.py  extraction_config.py  planner_config.py  ranking_config.py  reflection_config.py  research_agent_config.py  retrieval_config.py  search_config.py
backend/decrypted_datasets/: sampled_browsecomp.csv
backend/extraction/: answer_extractor.py  entity_extractor.py  section_finder.py
backend/memory/: agent_memory.py  evidence_graph.py
backend/parsing/: html_parser.py  pdf_parser.py
backend/planner/: planner.py  query_constraints.py  query_decomposer.py  query_intent.py
backend/ranking/: reranker.py
backend/reflection/: query_refiner.py  reflection_engine.py
backend/retrieval/: document_fetcher.py
backend/scrapers/: __init__.py  base_scraper.py  config.py  duckduckgo_scraper.py  google_custom_search.py  selenium_scraper.py  serpapi_scraper.py  serper_scraper.py  tavily_scraper.py  utils.py
backend/scrapers/output/: duckduckgo_cleaned_20251008_232053.json  duckduckgo_raw_20251008_232053.json  google_custom_search_cleaned_20251008_231840.json  google_custom_search_raw_20251008_231840.json  serpapi_cleaned_20251008_231512.json  serpapi_raw_20251008_231512.json  serper_cleaned_20251008_231324.json  serper_raw_20251008_231324.json  tavily_cleaned_20251008_231231.json  tavily_raw_20251008_231231.json
backend/search/: frontier_scheduler.py  query_generator.py  search_agent.py
backend/services/: __init__.py  github_service.py  graph_service.py  llm_service.py  nvd_service.py  osv_service.py  pubmed_service.py
backend/tests/: test_pagerank.py  test_tavily_pipeline.py
backend/utils/: text_utils.py
frontend/: package-lock.json
